fixing many of the layout issues

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -140,7 +140,7 @@ a:hover {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 20px;
+  padding: 20px 20px;
   pointer-events: none;
   z-index: 2;
 }
@@ -152,11 +152,10 @@ a:hover {
 
 .hero-text-top .presents {
   font-family: 'Disorient', var(--font-display);
-  font-size: 1.2rem;
-  color: #E0E0E0;
+  font-size: 1.0rem;
+  color: #FFFFFF;
   text-transform: lowercase;
   letter-spacing: 2px;
-  margin-bottom: 10px;
 }
 
 .hero-text-top .title,
@@ -164,14 +163,14 @@ a:hover {
   font-family: 'Disorient', var(--font-display);
   font-size: 3.5rem;
   font-weight: 900;
-  color: #E0E0E0;
+  color: #FFFFFF;
   text-transform: uppercase;
-  letter-spacing: 6px;
+  letter-spacing: 2px;
 }
 
 .title-stack {
   position: relative;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
 }
 
 .hero-text-top .title-shadow {
@@ -199,10 +198,10 @@ a:hover {
 
 .hero-text-top .subtitle {
   font-family: 'Disorient', var(--font-display);
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #707181;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
   font-weight: 600;
   text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.7), -1px -1px 2px rgba(255, 255, 255, 0.7);
 }
@@ -210,9 +209,9 @@ a:hover {
 .hero-text-bottom {
   text-align: right;
   align-self: flex-end;
-  color: #B7B7B7;
+  color: #FFFFFF;
   font-family: 'Disorient', var(--font-display);
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 500;
 }
 
@@ -779,6 +778,14 @@ section h2 {
   padding: 40px;
   transition: all 0.3s ease;
   list-style: none;
+  position: relative;
+  cursor: pointer;
+}
+
+.list-item h2 a::after {
+  content: '';
+  position: absolute;
+  inset: 0;
 }
 
 .list-item:hover {
